--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -9,3 +9,6 @@ jobs:
     uses: devops-shop/roboshop-github-actions/.github/workflows/ci-main.yml@main
     with:
       appType: 'angular'
+      appName: 'frontend'
+    secrets:
+        vault_token: ${{ secrets.vault_token }}
