--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,6 @@ jobs:
     with:
       appType: 'angular'
       appName: 'frontend'
-      appEnv: 'dev'
+      resourceGroup: 'ukwest-dev'
     secrets:
         vault_token: ${{ secrets.vault_token }}
