--- a/default.conf
+++ b/default.conf
@@ -29,6 +29,10 @@ server {
       location /api/shipping/ { proxy_pass http://shipping:8080/; }
       location /api/payment/ { proxy_pass http://payment:8080/; }
 
+      location /api/ratings/ {
+        return 200 'OK';
+      }
+
       location /health {
         stub_status on;
         access_log off;
