--- a/nginx.conf
+++ b/nginx.conf
@@ -1,30 +1,72 @@
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log notice;
+pid /tmp/nginx.pid;
 
-user  nginx;
-worker_processes  auto;
-
-error_log  /var/log/nginx/error.log notice;
-pid        /run/nginx.pid;
-
+include /usr/share/nginx/modules/*.conf;
 
 events {
-    worker_connections  1024;
+    worker_connections 1024;
 }
 
-
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-
     log_format  main  '$time_local $remote_addr $request $request_time $status $body_bytes_sent $http_referer "$http_user_agent"';
 
-    access_log  /var/log/nginx/access.log  main;
+    access_log  /dev/stdout  main;
+    error_log /dev/stderr warn;
+    #access_log  /var/log/nginx/access.log  main;
 
-    sendfile        on;
-    #tcp_nopush     on;
+    # Direct temporary files to /tmp
+    client_body_temp_path /tmp/client_body_temp;  #
+    proxy_temp_path /tmp/proxy_temp; #
+    fastcgi_temp_path /tmp/fastcgi_temp; #
+    uwsgi_temp_path /tmp/uwsgi_temp; #
+    scgi_temp_path /tmp/scgi_temp; #
 
-    keepalive_timeout  65;
+    sendfile            on;
+    tcp_nopush          on;
+    keepalive_timeout   65;
+    types_hash_max_size 4096;
 
-    #gzip  on;
+    include             /etc/nginx/mime.types;
+    default_type        application/octet-stream;
 
     include /etc/nginx/conf.d/*.conf;
+
+    server {
+        listen       8080;
+        server_name  _;
+        root         /usr/share/nginx/html;
+
+        include /etc/nginx/default.d/*.conf;
+
+        error_page 404 /404.html;
+        location = /404.html {
+        }
+
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+        }
+
+        location /images/ {
+          expires 5s;
+          root   /usr/share/nginx/html;
+          try_files $uri /images/placeholder.jpg;
+        }
+      location /api/catalogue/ { proxy_pass http://catalogue:8080/; }
+      location /api/user/ { proxy_pass http://user:8080/; }
+      location /api/cart/ { proxy_pass http://cart:8080/; }
+      location /api/shipping/ { proxy_pass http://shipping:8080/; }
+      location /api/payment/ { proxy_pass http://payment:8080/; }
+
+      location /api/ratings/ {
+        return 200 'OK';
+      }
+
+        location /health {
+          stub_status on;
+          access_log off;
+        }
+
+    }
 }
