--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 user nginx;
 worker_processes auto;
 error_log /var/log/nginx/error.log notice;
-pid /tmp/nginx.pid;
+pid /run/nginx.pid;
 
 include /usr/share/nginx/modules/*.conf;
 
@@ -13,15 +13,8 @@ http {
     log_format  main  '$time_local $remote_addr $request $request_time $status $body_bytes_sent $http_referer "$http_user_agent"';
 
     access_log  /dev/stdout  main;
-    error_log /dev/stderr warn;
+    error_log /dev/stdout main;
     #access_log  /var/log/nginx/access.log  main;
-
-    # Direct temporary files to /tmp
-    client_body_temp_path /tmp/client_body_temp;  #
-    proxy_temp_path /tmp/proxy_temp; #
-    fastcgi_temp_path /tmp/fastcgi_temp; #
-    uwsgi_temp_path /tmp/uwsgi_temp; #
-    scgi_temp_path /tmp/scgi_temp; #
 
     sendfile            on;
     tcp_nopush          on;
@@ -34,7 +27,8 @@ http {
     include /etc/nginx/conf.d/*.conf;
 
     server {
-        listen       8080;
+        listen       80;
+        listen       [::]:80;
         server_name  _;
         root         /usr/share/nginx/html;
 
