--- a/default.conf
+++ b/default.conf
@@ -2,7 +2,18 @@ server {
     listen       80;
     server_name  localhost;
 
+    log_format  main  '$time_local $remote_addr $request $request_time $status $body_bytes_sent $http_referer "$http_user_agent"';
+
+    access_log  /dev/stdout  main;
+    error_log /dev/stdout main;
     #access_log  /var/log/nginx/host.access.log  main;
+
+#    proxy_connect_timeout 200s;
+#    proxy_send_timeout 200s;
+#    proxy_read_timeout 200s;
+
+#    proxy_buffer_size 128k;
+#    proxy_buffers 8 256k;
 
     location / {
         root   /usr/share/nginx/html;
@@ -28,6 +39,10 @@ server {
       location /api/cart/ { proxy_pass http://cart:8080/; }
       location /api/shipping/ { proxy_pass http://shipping:8080/; }
       location /api/payment/ { proxy_pass http://payment:8080/; }
+
+      location /api/ratings/ {
+        return 200 'OK';
+      }
 
       location /health {
         stub_status on;
