--- a/nginx.conf
+++ b/nginx.conf
@@ -13,8 +13,15 @@ http {
     log_format  main  '$time_local $remote_addr $request $request_time $status $body_bytes_sent $http_referer "$http_user_agent"';
 
     access_log  /dev/stdout  main;
-    error_log /dev/stdout main;
+    error_log /dev/stderr warn;
     #access_log  /var/log/nginx/access.log  main;
+
+    # Direct temporary files to /tmp
+    client_body_temp_path /tmp/client_body_temp;  #
+    proxy_temp_path /tmp/proxy_temp; #
+    fastcgi_temp_path /tmp/fastcgi_temp; #
+    uwsgi_temp_path /tmp/uwsgi_temp; #
+    scgi_temp_path /tmp/scgi_temp; #
 
     sendfile            on;
     tcp_nopush          on;
