--- a/nginx.conf
+++ b/nginx.conf
@@ -48,6 +48,8 @@ http {
         location = /50x.html {
         }
 
+        proxy_http_version 1.1;
+
         location /images/ {
           expires 5s;
           root   /usr/share/nginx/html;
